@@ -2,9 +2,9 @@ package br.com.quatty.backend.infra.config;
 
 
 import br.com.quatty.backend.infra.filter.CsrfCookieFilter;
-import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
@@ -13,10 +13,9 @@ import org.springframework.security.web.authentication.www.BasicAuthenticationFi
 import org.springframework.security.web.csrf.CookieCsrfTokenRepository;
 import org.springframework.security.web.csrf.CsrfTokenRequestAttributeHandler;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 
 @Configuration
@@ -30,28 +29,27 @@ public class ProjectSecurityConfig {
         jwtAuthenticationConverter.setJwtGrantedAuthoritiesConverter(new KeycloakRoleConverter());
 
         http.sessionManagement().sessionCreationPolicy(SessionCreationPolicy.STATELESS).and()
-                .cors().configurationSource(new CorsConfigurationSource() {
-                    @Override
-                    public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
-                        CorsConfiguration config = new CorsConfiguration();
-                        config.setAllowedOrigins(Collections.singletonList("http://localhost:4200"));
-                        config.setAllowedMethods(Collections.singletonList("*"));
-                        config.setAllowCredentials(true);
-                        config.setAllowedHeaders(Collections.singletonList("*"));
-                        config.setExposedHeaders(Arrays.asList("Authorization"));
-                        config.setMaxAge(3600L);
-                        return config;
-                    }
+                .cors().configurationSource(request -> {
+                    CorsConfiguration config = new CorsConfiguration();
+                    config.setAllowedOrigins(Collections.singletonList("http://localhost:4200"));
+                    config.setAllowedMethods(Collections.singletonList("*"));
+                    config.setAllowCredentials(true);
+                    config.setAllowedHeaders(Collections.singletonList("*"));
+                    config.setExposedHeaders(List.of("Authorization"));
+                    config.setMaxAge(3600L);
+                    return config;
                 }).and().csrf((csrf) -> csrf.csrfTokenRequestHandler(requestHandler).ignoringRequestMatchers("/contact","/register")
                         .csrfTokenRepository(CookieCsrfTokenRepository.withHttpOnlyFalse()))
                 .addFilterAfter(new CsrfCookieFilter(), BasicAuthenticationFilter.class)
                 .authorizeHttpRequests()
-                .requestMatchers("/hello").hasRole("USER")
-                .requestMatchers("/hello").hasAnyRole("USER","ADMIN")
-                .requestMatchers("/myLoans").authenticated()
-                .requestMatchers("/myCards").hasRole("USER")
-                .requestMatchers("/user").authenticated()
-                .requestMatchers("/notices","/contact","/register").permitAll()
+                .requestMatchers("/api/v1/athlete").hasAnyRole("ATHLETE", "ADMIN")
+                .requestMatchers("/api/v1/locale").hasAnyRole("ATHLETE", "ADMIN", "MANAGER")
+                .requestMatchers("/api/v1/booking").hasAnyRole( "ADMIN", "MANAGER", "COMMUNITY_MANAGER")
+                .requestMatchers("/api/v1/community").hasAnyRole("ATHLETE", "ADMIN")
+                .requestMatchers("/api/v1/gym").hasAnyRole("MANAGER", "ADMIN")
+                .requestMatchers("/api/v1/membership").hasAnyRole("COMMUNITY_MANAGER", "ADMIN")
+                .requestMatchers("/api/v1/practicable").hasAnyRole("MANAGER", "ADMIN")
+                .requestMatchers("/api/v1/sport").hasRole("ADMIN")
                 .and().oauth2ResourceServer().jwt().jwtAuthenticationConverter(jwtAuthenticationConverter);
         return http.build();
     }
